--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,8 @@ hs_err_pid*
 # *.ipr
 
 out/
+# Ignore Gradle project-specific cache directory
+.gradle
+
+# Ignore Gradle build output directory
+build
