--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ plugins {
 
     // Apply the application plugin to add support for building a CLI application.
     id 'application'
+
+    id 'org.openjfx.javafxplugin' version '0.0.8'
 }
 
 repositories {
@@ -26,6 +28,11 @@ dependencies {
 
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
+}
+
+javafx {
+    version = '11'
+    modules = [ 'javafx.controls', 'javafx.graphics', 'javafx.media' ]
 }
 
 application {
